--- a/app/src/main/res/layout/activity_cliente.xml
+++ b/app/src/main/res/layout/activity_cliente.xml
@@ -24,13 +24,56 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
         android:layout_marginTop="80dp"
+        android:layout_marginRight="16dp"
         android:background="@android:color/white"
-        android:padding="8dp"
-        android:orientation="vertical"></LinearLayout>
+        android:orientation="vertical"
+        android:padding="8dp">
+
+        <EditText
+            android:id="@+id/localInput"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@android:color/white"
+            android:drawableLeft="@drawable/circulo_verde"
+            android:drawablePadding="6dp"
+            android:ems="10"
+            android:enabled="false"
+            android:hint="@string/meu_local"
+            android:inputType="textPersonName"
+            android:textColor="@android:color/darker_gray"
+            android:textColorHint="@android:color/darker_gray"
+            android:textSize="18sp"
+            android:importantForAutofill="no"
+            android:drawableStart="@drawable/circulo_verde" tools:targetApi="o" />
+
+        <EditText
+            android:id="@+id/localDestino"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@android:color/white"
+            android:drawableLeft="@drawable/circulo_verde"
+            android:drawableTint="@android:color/darker_gray"
+            android:drawablePadding="6dp"
+            android:ems="10"
+            android:hint="@string/digite_seu_destino"
+            android:inputType="textPersonName"
+            android:textColor="@android:color/darker_gray"
+            android:textColorHint="@android:color/darker_gray"
+            android:textSize="18sp"
+            android:importantForAutofill="no"
+            android:drawableStart="@drawable/circulo_verde" tools:targetApi="o" />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btnChamarPrestador"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_gravity="bottom"
+        android:text="@string/chamar_prestador"
+        android:theme="@style/botaoPadrao" />
 
 
 </android.support.design.widget.CoordinatorLayout>
