--- a/app/src/main/res/layout/content_cliente.xml
+++ b/app/src/main/res/layout/content_cliente.xml
@@ -18,6 +18,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:context=".activity.MapsActivity" />
+        tools:context=".activity.MapsActivity"
+        />
 
 </android.support.constraint.ConstraintLayout>
