--- a/app/src/main/res/layout/activity_cliente.xml
+++ b/app/src/main/res/layout/activity_cliente.xml
@@ -26,46 +26,75 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="74dp"
         android:layout_marginRight="16dp"
         android:background="@android:color/white"
         android:orientation="vertical"
         android:padding="8dp">
 
+        <CheckBox
+            android:id="@+id/checkLocal"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:onClick="opcaoLocal"
+            android:text="@string/utilizar_local_atual" />
+
         <EditText
-            android:id="@+id/localInput"
+
+            android:id="@+id/meuLocal"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@android:color/white"
+            android:drawableStart="@drawable/circulo_verde"
             android:drawableLeft="@drawable/circulo_verde"
             android:drawablePadding="6dp"
             android:ems="10"
             android:enabled="false"
             android:hint="@string/meu_local"
+            android:importantForAutofill="no"
             android:inputType="textPersonName"
             android:textColor="@android:color/darker_gray"
             android:textColorHint="@android:color/darker_gray"
             android:textSize="18sp"
-            android:importantForAutofill="no"
-            android:drawableStart="@drawable/circulo_verde" tools:targetApi="o" />
+            android:visibility="gone"
+            tools:targetApi="o" />
 
         <EditText
             android:id="@+id/localDestino"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@android:color/white"
+            android:drawableStart="@drawable/circulo_verde"
             android:drawableLeft="@drawable/circulo_verde"
-            android:drawableTint="@android:color/darker_gray"
             android:drawablePadding="6dp"
+            android:drawableTint="@android:color/darker_gray"
             android:ems="10"
-            android:enabled="false"
             android:hint="@string/digite_seu_destino"
+            android:importantForAutofill="no"
             android:inputType="textPersonName"
             android:textColor="@android:color/darker_gray"
             android:textColorHint="@android:color/darker_gray"
             android:textSize="18sp"
+            tools:targetApi="o" />
+
+        <EditText
+            android:id="@+id/servico"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@android:color/white"
+            android:drawableStart="@drawable/circulo_verde"
+            android:drawableLeft="@drawable/circulo_verde"
+            android:drawablePadding="6dp"
+            android:drawableTint="@android:color/darker_gray"
+            android:ems="10"
+            android:enabled="false"
+            android:hint="@string/servico_exemplo"
             android:importantForAutofill="no"
-            android:drawableStart="@drawable/circulo_verde" tools:targetApi="o" />
+            android:inputType="textPersonName"
+            android:textColor="@android:color/darker_gray"
+            android:textColorHint="@android:color/darker_gray"
+            android:textSize="18sp"
+            tools:targetApi="o" />
     </LinearLayout>
 
     <Button
