Status da requisição pt 1 (484)

--- a/app/src/main/res/layout/activity_cliente.xml
+++ b/app/src/main/res/layout/activity_cliente.xml
@@ -23,6 +23,7 @@
     <include layout="@layout/content_cliente" />
 
     <LinearLayout
+        android:id="@+id/linearLayotDestino"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
