--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#4169BD</color>
-    <color name="colorPrimaryDark">#6D6DA7</color>
-    <color name="colorAccent">#000E61</color>
-
-    <color name="backgroundLoginCadastro">#AAA6A6</color>
-
-    <color name="btnLogin">#FFFFFF</color>
-    <color name="brnCadastro">#7373C4</color>
-
+    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorAccent">#D81B60</color>
+    <color name="cinzatext">#2F2A2A</color>
+    <color name="pretotext">#0A0A0A</color>
 </resources>
